[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/UI/SceneContainer_0.png" type="Texture" id=1]
[ext_resource path="res://Levels/SceneAreaContainer.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI/return.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/restart.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 1.0

[node name="SceneAreaContainer" type="Node2D"]
rotation = -0.000977376
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1920, 1080 )
mouse_filter = 2
texture = ExtResource( 1 )

[node name="Mouse" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mouse"]
shape = SubResource( 1 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="CenterCotainer" type="CenterContainer" parent="UI/HUD"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -940.0
margin_top = -170.0
margin_right = 940.0
margin_bottom = -20.0
rect_min_size = Vector2( 0, 150 )

[node name="HBoxContainer" type="HBoxContainer" parent="UI/HUD/CenterCotainer"]
margin_left = 940.0
margin_top = 25.0
margin_right = 940.0
margin_bottom = 125.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 6
size_flags_vertical = 6
custom_constants/separation = 15
alignment = 1

[node name="Return" type="TextureButton" parent="UI/HUD"]
margin_left = 1790.0
margin_top = 24.0
margin_right = 1890.0
margin_bottom = 124.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 10
size_flags_vertical = 10
texture_normal = ExtResource( 4 )
expand = true

[node name="Restart" type="TextureButton" parent="UI/HUD"]
margin_left = 1631.0
margin_top = 26.0
margin_right = 1731.0
margin_bottom = 126.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 10
size_flags_vertical = 10
texture_normal = ExtResource( 5 )
expand = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 960, 540 )
current = true

[connection signal="area_entered" from="Mouse" to="." method="_on_Mouse_area_entered"]
[connection signal="area_exited" from="Mouse" to="." method="_on_Mouse_area_exited"]
[connection signal="pressed" from="UI/HUD/Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="UI/HUD/Restart" to="." method="_on_Restart_pressed"]
